# Dasher-Android

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  build.gradle.kts  settings.gradle.kts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/at/dasher/android/: AnalyticsService.kt  DasherApp.kt  DasherEngine.kt  DasherImeService.kt  DataInstaller.kt  LocaleHelper.kt  MainActivity.kt  NativeBridge.kt  ParameterInfo.kt  SettingsScreen.kt  TiltInputProvider.kt
app/src/main/java/at/dasher/android/ui/: DasherCanvasView.kt
app/src/main/java/at/dasher/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/dasherproject/android/: DasherEngine.kt  DataInstaller.kt  MainActivity.kt  NativeBridge.kt  TiltInputProvider.kt
app/src/main/java/org/dasherproject/android/ui/: DasherCanvasView.kt
app/src/main/java/org/dasherproject/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/xml/: method.xml
app/src/test/java/at/dasher/android/: AnalyticsServiceCrashTest.kt
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
scripts/: verify_posthog_exceptions.py
